/*
 * Copyright Â© 2023 Khruslov Dmytro khruslov.work@gmail.com
 */

syntax = "proto3";

option go_package = "internal/types";

import "peers.proto";

package blockchain;

// StatusRequest is the request for getting status of the node.
message StatusRequest {}

// StatusResponse is the response for getting status of the node.
message StatusResponse {
    Peer peer = 1;
    uint64 last_block_index = 4;
    bytes last_block_hash = 5;
}
